Update and rename README.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-# ArielGugudan.github.io
 <!DOCTYPE html>
-
 <html>
+  
   <head> 
-    <title> Ariel Gugudan Resume </title> 
+    <title>Ariel Gugudan Resume</title>
+    <style>
+  
   </head>
   
   <body "style=background-color:seafoam;"> 
