--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
   </head>
   
-  <body "style=background-color:seafoam;"> 
+  <body>
   <div id="container">
     <h1> ARIEL GUGUDAN </h1>
     <h3> Minneapolis, Minnesota </h3>
